[gd_scene load_steps=11 format=3 uid="uid://cxq08m17pbxcj"]

[ext_resource type="PackedScene" uid="uid://comjphfowf338" path="res://level objects/Enemies/baddy_template.tscn" id="1_4dqqw"]
[ext_resource type="Script" uid="uid://c4p0c7fd4qj8v" path="res://level objects/Enemies/krow.gd" id="2_0y20s"]
[ext_resource type="Texture2D" uid="uid://dvm8l6uwbnv7r" path="res://sprite/Baddies/Krow.png" id="2_hxsdi"]
[ext_resource type="Texture2D" uid="uid://60guegong456" path="res://sprite/Baddies/in_air_krow.png" id="3_hxsdi"]
[ext_resource type="AudioStream" uid="uid://xyd1yq7htcxd" path="res://sounds/sound effects/Baddies/krow-hit.mp3" id="5_i0htv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cc7nv"]
size = Vector2(28, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0htv"]
size = Vector2(26, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_cc7nv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hxsdi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hxsdi")
}],
"loop": true,
"name": &"in_air",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gp613"]
size = Vector2(28, 30)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i0htv"]
radius = 8.0
height = 28.0

[node name="krow" instance=ExtResource("1_4dqqw")]
z_index = 3
collision_layer = 0
collision_mask = 1
script = ExtResource("2_0y20s")
ground_time = 2.5
air_time = 2.0
base_speed = 180.0
score_value = 3

[node name="CollisionShape2D" parent="shoot_area" index="0"]
visible = false
disabled = true

[node name="krow_shoot_collision" type="CollisionPolygon2D" parent="shoot_area" index="1"]
scale = Vector2(1.1, 1.1)
polygon = PackedVector2Array(-8, -8, -5, -13, -1, -14, 2, -14, 5, -12, 7, -10, 8, -7, 8.33333, -4.16667, 11.6667, -4.16667, 12, 0, 6, 5, 3, 5, 5, 13, -4, 13, -2, 5, -5, 5, -13, 0, -13, -4, -9.16667, -4.16667)

[node name="mobile_shot_collision" type="CollisionShape2D" parent="shoot_area" index="2"]
visible = false
shape = SubResource("RectangleShape2D_cc7nv")
disabled = true

[node name="CollisionShape2D" parent="." index="1"]
visible = false

[node name="krow_collision" type="CollisionShape2D" parent="." index="2"]
shape = SubResource("RectangleShape2D_i0htv")

[node name="krow_sprite" type="AnimatedSprite2D" parent="." index="3"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_cc7nv")
metadata/_edit_lock_ = true

[node name="sprite" parent="." index="4"]
visible = false

[node name="baddy_sound" parent="." index="5"]
stream = ExtResource("5_i0htv")
volume_db = 5.0

[node name="nearby_dector" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" parent="nearby_dector" index="0"]
visible = false
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="nearby_dector" index="1"]
shape = SubResource("RectangleShape2D_gp613")

[node name="shadow_dector" type="Area2D" parent="." index="7" groups=["baddies"]]
collision_layer = 32
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="shadow_dector" index="0"]
shape = SubResource("CapsuleShape2D_i0htv")

[node name="fly_timer" type="Timer" parent="Timers" index="2"]
unique_name_in_owner = true
autostart = true

[node name="egg_sprite" parent="." index="13"]
position = Vector2(1.19209e-07, -4)
scale = Vector2(0.707031, 0.707031)

[connection signal="animation_changed" from="krow_sprite" to="." method="_on_krow_sprite_animation_changed"]
[connection signal="area_entered" from="shadow_dector" to="." method="_on_nearby_dector_area_entered"]
[connection signal="timeout" from="Timers/fly_timer" to="." method="_on_fly_timer_timeout"]
